styles/globals.css
* {
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
  font-family: "Poppins", sans-serif !important;
}
/** 
font-family: "Yusei Magic", sans-serif !important;
**/
#__next {
  background-color: white !important;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.tilt-icon:hover {
  transform: rotate(8deg);
}

*:focus {
  outline: none;
}

a {
  text-decoration: none;
  color: darkslategrey;
}

a:hover {
  color: darkgrey;
}

ul {
  list-style-type: none;
}

footer {
  width: 100%;
  font-family: "Poppins", sans-serif !important;
  padding: 20px;
  background-color: #232c33;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
  justify-content: space-evenly;
}

.list-item {
  font-family: "Poppins", sans-serif !important;
  font-size: 1.2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.plain-text {
  font-family: "Poppins", sans-serif !important;
  font-size: 1rem;
  padding-left: 5px;
  text-decoration: none;
  color: darkslategrey;
}

.sec-header {
  font-family: "Poppins", sans-serif !important;
  font-size: 1.4rem;
  font-weight: 800;
}

.page-header {
  font-family: "Chango", cursive !important;
  color: #54494b !important;
  font-weight: 900 !important;
  letter-spacing: -5px !important;
  font-size: 3rem !important;
}

.login-bttn {
  color: white;
  text-decoration: none;
}

.noteLink {
  line-break: anywhere;
  font-weight: 600;
}

.noteLink:hover {
  color: blue;
  text-decoration: underline;
}

.siteContainer {
  width: 100%;
  max-width: 1000px;
  margin: 0px auto;
  margin-top: 110px;
  height: auto;
  background-color: white;
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: column nowrap;
}

.shadow {
  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -2px rgba(0, 0, 0, 0.05);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
}

.shadowSharp {
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
}

.MuiInputBase-root,
.MuiFilledInput-root,
.MuiFilledInput-underline,
.MuiInputBase-formControl {
  background-color: transparent !important;
}

.MuiFormControl-root,
.MuiTextField-root {
  width: 100%;
  line-height: 1.4;
}

@media (max-width: 600px) {
  .Toolbar {
    align-self: flex-end;
  }

  footer {
    justify-content: flex-end;
  }
}

.alt-blue-button {
  font-size: 1.5rem !important;
  border-radius: 10px !important;
  margin: 20px;
}

.blue-button {
  min-width: 260px;
  white-space: nowrap;
  font-weight: 900;
  font-size: 2rem;
  color: white;
  border: none;
  padding: 10px 50px;
  background-color: lightskyblue;
  border-radius: 0px 0px 10px 10px;
}

.blue-button:hover {
  background-color: lightblue;
  cursor: pointer;
}

.MuiSvgIcon-root {
  margin-right: 6px !important;
  color: #dadff7;
}

.gradient-text {
  font-family: "Chango", cursive !important;
  background: -webkit-linear-gradient(
    left,
    orange,
    yellow,
    green,
    cyan,
    blue,
    violet
  );
  background: -o-linear-gradient(
    right,
    orange,
    yellow,
    green,
    cyan,
    blue,
    violet
  );
  background: -moz-linear-gradient(
    right,
    orange,
    yellow,
    green,
    cyan,
    blue,
    violet
  );
  background: linear-gradient(
    to right,
    orange,
    yellow,
    green,
    cyan,
    blue,
    violet
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

